--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@
 
 #Ignore database
 /config/database.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
